--- a/programming.html
+++ b/programming.html
@@ -18,7 +18,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@200;600&family=Noto+Serif+JP&display=swap"
-        rel="stylesheet">
+          rel="stylesheet">
 </head>
 
 <body class="animate__animated animate__fadeIn">
@@ -58,8 +58,10 @@
                     </ol>
                 </nav>
                 <h2>プログラミング分野</h2>
-                <p>JavaやJSを使用したプログラミング分野の作品です。<br>
-                    Processingやmicro:bitを使用して制作しており、押したら何かが起こるなどの、インタラクションのある作品もあります。</p>
+                <p>
+                    JavaやJSを使用したプログラミング分野の作品です。<br>
+                    Processingやmicro:bitを使用して制作しており、押したら何かが起こるなどの、インタラクションのある作品もあります。
+                </p>
             </div>
         </div>
         <div class="card-container">
@@ -71,7 +73,8 @@
             <div class="cardComment">
                 <h2>触ると止まる蝶々</h2>
                 <p class="Dialog">1年後期｜メディアプログラミング演習</p>
-                <p class="Description">タップすると、蝶々が止まるアニメーション。<br>
+                <p class="Description">
+                    タップすると、蝶々が止まるアニメーション。<br>
                     <a href="processingHtml/ButterflySource.html" onclick="
             window.open('processingHtml/ButterflySource.html', '_blank', 'width=500,height=500');
             return false;">コードを表示</a>
@@ -88,7 +91,8 @@
             <div class="cardComment">
                 <h2>Google</h2>
                 <p class="Dialog">1年後期｜メディアプログラミング演習</p>
-                <p class="Description">Googleの●と■を押すとアニメーションがおこる。<br>
+                <p class="Description">
+                    Googleの●と■を押すとアニメーションがおこる。<br>
                     <a href="processingHtml/GoogleSource.html" onclick="
             window.open('processingHtml/GoogleSource.html', '_blank', 'width=500,height=500');
             return false;">コードを表示</a>
@@ -98,17 +102,18 @@
         </div>
         <div class="card-container">
             <div class="cardSquare">
-                <div style="position:relative;height:0;padding-bottom:100%;"><iframe
-                        style="position:absolute;top:-100px;left:0;width:570px;height:650px;"
-                        src="https://makecode.microbit.org/---run?id=S40313-95450-98911-11225"
-                        allowfullscreen="allowfullscreen"
-                        sandbox="allow-popups allow-forms allow-scripts allow-same-origin" frameborder="0"></iframe>
+                <div style="position:relative;height:0;padding-bottom:100%;">
+                    <iframe style="position:absolute;top:-100px;left:0;width:570px;height:650px;"
+                            src="https://makecode.microbit.org/---run?id=S40313-95450-98911-11225"
+                            allowfullscreen="allowfullscreen"
+                            sandbox="allow-popups allow-forms allow-scripts allow-same-origin" frameborder="0"></iframe>
                 </div>
             </div>
             <div class="cardComment">
                 <h2>成長する木</h2>
                 <p class="Dialog">2年前期｜デバイス演習Ⅱ</p>
-                <p class="Description">温度が上がると木が成長し、上がりすぎると枯れて燃える。<br>
+                <p class="Description">
+                    温度が上がると木が成長し、上がりすぎると枯れて燃える。<br>
                     <a href="https://makecode.microbit.org/S40313-95450-98911-11225" onclick="
             window.open('https://makecode.microbit.org/S40313-95450-98911-11225', '_blank', 'width=700,height=500');
             return false;">コードを表示</a>
@@ -117,46 +122,40 @@
             </div>
         </div>
         <div class="card-container">
-          <div class="cardImg">  
-            <div class="slider-container">
-            <div class="slider">
-              <img src="medias/PET001.avif" alt="Image 1">
-              <img src="medias/PET002.avif" alt="Image 2">
-              <img src="medias/PET003.avif" alt="Image 3">
-              <img src="medias/PET004.avif" alt="Image 4">
-              <!-- さらに追加の画像をここに追記 -->
+                <div class="cardVideo">
+                    <iframe src="https://www.youtube-nocookie.com/embed/jsrH-aqHS-Y" title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            allowfullscreen></iframe>
+                </div>
+                <div class="cardComment">
+                    <h2>ペットボトル卓上サーバー</h2>
+                    <p class="Dialog">2年前期｜デバイス演習Ⅱ</p>
+                    <p class="Description">
+                        机の上に置けるペットボトルのウォーターサーバーです。<br>
+                    </p>
+                    <p class="Use">使用ソフト｜micro:bit,Fusion</p>
+                </div>
             </div>
-            <button class="prev-button">&lt;</button>
-            <button class="next-button">&gt;</button>
-          </div>
-          </div>
-          <div class="cardComment">
-            <h2>ペットボトルウォーターサーバー</h2>
-            <p class="Dialog">2年前期｜デバイス演習Ⅱ</p>
-            <p class="Description">現在製作中のものです。<br>
-            </p>
-            <p class="Use">使用ソフト｜micro:bit,Fusion</p>
-          </div>
-        </div>
-        <div class="menu-container" >
-            <p class="menu-button">SELECT</p>
-            <div class="hover-menu">
-                <ul>
-                    <li><a href="videos.html">映像</a></li>
-                    <li><a href="interactive.html">インタラクティブ</a></li>
-                    <li><a href="programming.html">プログラミング</a></li>
-                    <li><a href="web.html">ウェブ</a></li>
-                    <li><a href="others.html">その他</a></li>
-                </ul>
+            <div class="menu-container">
+                <p class="menu-button">SELECT</p>
+                <div class="hover-menu">
+                    <ul>
+                        <li><a href="videos.html">映像</a></li>
+                        <li><a href="interactive.html">インタラクティブ</a></li>
+                        <li><a href="programming.html">プログラミング</a></li>
+                        <li><a href="web.html">ウェブ</a></li>
+                        <li><a href="others.html">その他</a></li>
+                    </ul>
+                </div>
             </div>
-        </div>
-        <div class="topLink">
-            <p id="page-top">
-                <a href="#">ページ上部に戻る
-                </a>
-            </p>
-        </div>
-    </main>
+            <div class="topLink">
+                <p id="page-top">
+                    <a href="#">
+                        ページ上部に戻る
+                    </a>
+                </p>
+            </div>
+</main>
     <footer>
         <p>Copyright © i2224046 All rights reserved.｜<a class="forIndex" href="index.html">ホームに戻る</a></p>
     </footer>
