--- a/interactive.html
+++ b/interactive.html
@@ -49,132 +49,164 @@
     </ul>
   </header>
   <main>
-    <div class="card-container">
-      <div class="cardDescription">
-        <nav aria-label="breadcrumb">
-          <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Interaction</li>
-          </ol>
-        </nav>
-        <h2>インタラクティブ分野</h2>
-        <p>押したら何かが起こるなどの、インタラクションのある作品です。<br>
-          AdobeXDやUnity2Dなどを使用して制作しています。</p>
+      <div class="card-container">
+          <div class="cardDescription">
+              <nav aria-label="breadcrumb">
+                  <ol class="breadcrumb">
+                      <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                      <li class="breadcrumb-item active" aria-current="page">Interaction</li>
+                  </ol>
+              </nav>
+              <h2>インタラクティブ分野</h2>
+              <p>
+                  押したら何かが起こるなどの、インタラクションのある作品です。<br>
+                  AdobeXDやUnity2Dなどを使用して制作しています。
+              </p>
+          </div>
       </div>
-    </div>
-    <div class="card-container">
-      <div class="cardXD">
-        <iframe src="https://xd.adobe.com/embed/6756049b-2533-4ea6-b3d4-c3a03657234f-3205/?fullscreen" frameborder="0"
-          allowfullscreen></iframe>
+      <div class="card-container">
+          <div class="cardXD">
+              <iframe src="https://xd.adobe.com/embed/6756049b-2533-4ea6-b3d4-c3a03657234f-3205/?fullscreen" frameborder="0"
+                      allowfullscreen></iframe>
+          </div>
+          <div class="cardComment">
+              <h2>進化</h2>
+              <p class="Dialog">1年後期｜デバイス演習Ⅰ</p>
+              <p class="Description">
+                  AdobeXDを使った作品。<br>
+                  タップすると、PHSがスマートフォンへと進化する。
+              </p>
+              <p class="Use">使用ソフト｜AdobeXD</p>
+          </div>
       </div>
-      <div class="cardComment">
-        <h2>進化</h2>
-        <p class="Dialog">1年後期｜デバイス演習Ⅰ</p>
-        <p class="Description">AdobeXDを使った作品。<br>
-          タップすると、PHSがスマートフォンへと進化する。</p>
-        <p class="Use">使用ソフト｜AdobeXD</p>
+      <div class="card-container">
+          <div class="cardXD">
+              <iframe src="https://xd.adobe.com/embed/8e8d8652-77c9-4d41-9447-67bd368afa4f-dbde/?fullscreen" frameborder="0"
+                      allowfullscreen></iframe>
+          </div>
+          <div class="cardComment">
+              <h2 class="Title">開発</h2>
+              <p class="Dialog">1年後期｜デバイス演習Ⅰ</p>
+              <p class="Description">
+                  AdobeXDを使った作品。<br>
+                  タップすると、森だった風景が街になっていく。
+              </p>
+              <p class="Use">使用ソフト｜AdobeXD</p>
+          </div>
       </div>
-    </div>
-    <div class="card-container">
-      <div class="cardXD">
-        <iframe src="https://xd.adobe.com/embed/8e8d8652-77c9-4d41-9447-67bd368afa4f-dbde/?fullscreen" frameborder="0"
-          allowfullscreen></iframe>
+      <div class="card-container">
+          <div class="cardVideo">
+              <iframe src="https://www.youtube-nocookie.com/embed/0zELOUOTbKs" title="YouTube video player" frameborder="0"
+                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                      allowfullscreen></iframe>
+          </div>
+          <div class="cardComment">
+              <h2 class="Title">てんきスイッチ</h2>
+              <p class="Dialog">1年後期｜デバイス演習Ⅰ</p>
+              <p class="Description">電気のスイッチ裏にマウスが隠されており、スイッチを押し込むとマウスがクリックされ動画が再生される仕組みとなっている。</p>
+              <p class="Use">使用ソフト｜AdobeXD,DaVinci Resolve,AviUtl</p>
+          </div>
       </div>
-      <div class="cardComment">
-        <h2 class="Title">開発</h2>
-        <p class="Dialog">1年後期｜デバイス演習Ⅰ</p>
-        <p class="Description">AdobeXDを使った作品。<br>
-          タップすると、森だった風景が街になっていく。</p>
-        <p class="Use">使用ソフト｜AdobeXD</p>
+      <div class="card-container">
+          <div class="cardVideo">
+              <iframe src="https://www.youtube-nocookie.com/embed/FzJQsthRfgk" title="YouTube video player" frameborder="0"
+                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                      allowfullscreen></iframe>
+          </div>
+          <div class="cardComment">
+              <h2 class="Title">･ω･</h2>
+              <p class="Dialog">1年後期｜デバイス演習Ⅰ</p>
+              <p class="Description">
+                  SDカードをリーダーに差し込むと、映像がランダムで再生される。<br>
+                  マウスを分解し、スイッチをリーダーに埋め込んでおり、SDカードが差し込まれるとスイッチがオンになりマウスクリックと同じ動作を起こす仕組みになっている。
+              </p>
+              <p class="Use">使用ソフト｜AdobeXD,DaVinci Resolve,Illustrator,VOICEROID</p>
+          </div>
       </div>
-    </div>
-    <div class="card-container">
-      <div class="cardVideo">
-        <iframe src="https://www.youtube-nocookie.com/embed/0zELOUOTbKs" title="YouTube video player" frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen></iframe>
+      <div class="card-container">
+          <div class="cardVideo">
+              <iframe src="https://www.youtube-nocookie.com/embed/rBiF0-p2yLY" title="YouTube video player" frameborder="0"
+                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                      allowfullscreen></iframe>
+          </div>
+          <div class="cardComment">
+              <h2 class="Title">指先工場</h2>
+              <p class="Dialog">2年前期｜インタラクション演習</p>
+              <p class="Description">
+                  指が触れることにより、自身がその作品に参加しているように思える作品。少しでもズレてしまうと参加していると思えなくなってしまうため、カメラの動きなど細部までこだわった。<br>
+                  指を真ん中に置いてお楽しみください。
+              </p>
+              <p class="Use">使用ソフト｜Unity2D</p>
+          </div>
       </div>
-      <div class="cardComment">
-        <h2 class="Title">てんきスイッチ</h2>
-        <p class="Dialog">1年後期｜デバイス演習Ⅰ</p>
-        <p class="Description">電気のスイッチ裏にマウスが隠されており、スイッチを押し込むとマウスがクリックされ動画が再生される仕組みとなっている。</p>
-        <p class="Use">使用ソフト｜AdobeXD,DaVinci Resolve,AviUtl</p>
+      <div class="card-container">
+          <div class="cardVideo">
+              <iframe id="webgl-frame"
+                      src="https://40851.play.unityroom.com?expires=1690522378&amp;salt=66810715722775248699764384693767910793&amp;sig=9461e57343830d0cceb16152acfab106d83e7509"
+                      frameborder="0" scrolling="auto"></iframe>
+          </div>
+          <div class="cardComment">
+              <h2 class="Title">何気ない日常？</h2>
+              <p class="Dialog">2年前期｜インタラクション演習</p>
+              <p class="Description">
+                  画面を押すと再生されるループアニメーションのランダム再生。<br>
+                  <a href="https://unityroom.com/games/2224046looprandominteraction" target="_blank">アクセスできない場合はこちら</a>
+              </p>
+              <p class="Use">使用ソフト｜Unity2D</p>
+          </div>
       </div>
-    </div>
-    <div class="card-container">
-      <div class="cardVideo">
-        <iframe src="https://www.youtube-nocookie.com/embed/FzJQsthRfgk" title="YouTube video player" frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen></iframe>
+      <div class="card-container">
+          <div class="cardVideo">
+              <iframe src="https://www.youtube-nocookie.com/embed/RZss17cPLTQ" title="YouTube video player" frameborder="0"
+                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                      allowfullscreen></iframe>
+          </div>
+          <div class="cardComment">
+              <h2 class="Title">作品タイトル</h2>
+              <p class="Dialog">2年前期｜インタラクション演習</p>
+              <p class="Description">
+                  A4横にイラストをプリントし、その紙に対して映像をマッピングする作品。<br>
+                  自販機を印刷し、クリックするとランダムで色々な商品が落ちてくる。
+              </p>
+              <p class="Use">使用ソフト｜Unity2D</p>
+          </div>
       </div>
-      <div class="cardComment">
-        <h2 class="Title">･ω･</h2>
-        <p class="Dialog">1年後期｜デバイス演習Ⅰ</p>
-        <p class="Description">SDカードをリーダーに差し込むと、映像がランダムで再生される。<br>
-          マウスを分解し、スイッチをリーダーに埋め込んでおり、SDカードが差し込まれるとスイッチがオンになりマウスクリックと同じ動作を起こす仕組みになっている。</p>
-        <p class="Use">使用ソフト｜AdobeXD,DaVinci Resolve,Illustrator,VOICEROID</p>
+      <div class="card-container">
+          <div class="cardVideo">
+              <iframe src="https://www.youtube-nocookie.com/embed/IakSeQhZ8Es" title="YouTube video player" frameborder="0"
+                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                      allowfullscreen></iframe>
+          </div>
+          <div class="cardComment">
+              <h2 class="Title">タブレットモニター</h2>
+              <p class="Dialog">2年前期｜デジタルファブリケーション演習</p>
+              <p class="Description">
+                  機構を組み込んだ作品です。
+              </p>
+              <p class="Use">
+                  使用ソフト｜fusion,Illustrator
+              </p>
+          </div>
       </div>
-    </div>
-    <div class="card-container">
-      <div class="cardVideo">
-        <iframe src="https://www.youtube-nocookie.com/embed/rBiF0-p2yLY" title="YouTube video player" frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen></iframe>
+      <div class="menu-container">
+          <p class="menu-button">SELECT</p>
+          <div class="hover-menu">
+              <ul>
+                  <li><a href="videos.html">映像</a></li>
+                  <li><a href="interactive.html">インタラクティブ</a></li>
+                  <li><a href="programming.html">プログラミング</a></li>
+                  <li><a href="web.html">ウェブ</a></li>
+                  <li><a href="others.html">その他</a></li>
+              </ul>
+          </div>
       </div>
-      <div class="cardComment">
-        <h2 class="Title">指先工場</h2>
-        <p class="Dialog">2年前期｜インタラクション演習</p>
-        <p class="Description">指が触れることにより、自身がその作品に参加しているように思える作品。少しでもズレてしまうと参加していると思えなくなってしまうため、カメラの動きなど細部までこだわった。<br>
-          指を真ん中に置いてお楽しみください。</p>
-        <p class="Use">使用ソフト｜Unity2D</p>
+      <div class="topLink">
+          <p id="page-top">
+              <a href="#">
+                  ページ上部に戻る
+              </a>
+          </p>
       </div>
-    </div>
-    <div class="card-container">
-      <div class="cardVideo">
-        <iframe id="webgl-frame"
-          src="https://40851.play.unityroom.com?expires=1690522378&amp;salt=66810715722775248699764384693767910793&amp;sig=9461e57343830d0cceb16152acfab106d83e7509"
-          frameborder="0" scrolling="auto"></iframe>
-      </div>
-      <div class="cardComment">
-        <h2 class="Title">何気ない日常？</h2>
-        <p class="Dialog">2年前期｜インタラクション演習</p>
-        <p class="Description">画面を押すと再生されるループアニメーションのランダム再生。<br>
-        <a href="https://unityroom.com/games/2224046looprandominteraction" target="_blank">アクセスできない場合はこちら</a></p>
-        <p class="Use">使用ソフト｜Unity2D</p>
-      </div>
-    </div>
-    <div class="card-container">
-      <div class="cardVideo">
-        <iframe src="https://www.youtube-nocookie.com/embed/RZss17cPLTQ" title="YouTube video player" frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen></iframe>
-      </div>
-      <div class="cardComment">
-        <h2 class="Title">作品タイトル</h2>
-        <p class="Dialog">2年前期｜インタラクション演習</p>
-        <p class="Description">A4横にイラストをプリントし、その紙に対して映像をマッピングする作品。<br>
-          自販機を印刷し、クリックするとランダムで色々な商品が落ちてくる。</p>
-        <p class="Use">使用ソフト｜Unity2D</p>
-      </div>
-    </div>
-    <div class="menu-container">
-      <p class="menu-button">SELECT</p>
-      <div class="hover-menu">
-        <ul>
-          <li><a href="videos.html">映像</a></li>
-          <li><a href="interactive.html">インタラクティブ</a></li>
-          <li><a href="programming.html">プログラミング</a></li>
-          <li><a href="web.html">ウェブ</a></li>
-          <li><a href="others.html">その他</a></li>
-        </ul>
-      </div>
-    </div>
-    <div class="topLink">
-      <p id="page-top">
-        <a href="#">ページ上部に戻る
-        </a>
-      </p>
-    </div>
   </main>
   <footer>
     <p>Copyright © i2224046 All rights reserved.｜<a class="forIndex" href="index.html">ホームに戻る</a></p>
